# zmq_playground

./: CMakeLists.txt
Ch1_Basics/: Basics.md  CMakeLists.txt  hello_world_cl.cpp  string_pub.cpp  string_sub.cpp  weather_pub.cpp  weather_sub.cpp
Ch1_Basics/DivideAndConquer/: task_sink.cpp  task_ventilator.cpp
Ch2_SocketsandPatterns/: CMakeLists.txt  SocketsAndPatterns.md  multithread_req_srv.cpp  zmq_poll_example.cpp  zmq_thread_sync.cpp  zmq_xpub_example.cpp  zmq_xsub_example.cpp
Ch2_SocketsandPatterns/router_dealer/: CMakeLists.txt  req_repl_broker.cpp  req_repl_proxy.cpp  requester.cpp  responder.cpp
Chapter1_Basics/: CMakeLists.txt  hello_world_cl.cpp  hello_world_srv.cpp  pub_server.cpp  sub_client.cpp  weater_struct.h
Chapter1_Basics/DivideAndConquer/: task_sink.cpp  task_ventilator.cpp  task_worker.cpp
common/: common.h
monitoring/: CMakeLists.txt  monitoring.cpp
